restart after making backend url changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ jobs:
         provider: heroku
         app: fhv-frontend-staging
         api_key: $HEROKU_API_KEY
-        run: find . -type f -name "*.js" -exec sed -i 's/{{BACKEND_URL}}/fhv-backend-staging.herokuapp.com/g' {} +
+        run:
+          - find . -type f -name "*.js" -exec sed -i 's/{{BACKEND_URL}}/fhv-backend-staging.herokuapp.com/g' {} +
+          - restart
     - stage: test staging
       script: 'curl https://fhv-frontend-staging.herokuapp.com/'
     - stage: deploy to production
@@ -14,6 +16,8 @@ jobs:
       deploy:
         <<: *heroku
         app: fhv-frontend
-        run: find . -type f -name "*.js" -exec sed -i 's/{{BACKEND_URL}}/fhv-backend.herokuapp.com/g' {} +
+        run:
+          - find . -type f -name "*.js" -exec sed -i 's/{{BACKEND_URL}}/fhv-backend.herokuapp.com/g' {} +
+          - restart
     - stage: test production
       script: 'curl https://fhv-frontend.herokuapp.com/'
