--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ jobs:
           - find . -type f -name "*.js" -exec sed -i 's/{{BACKEND_URL}}/fhv-backend-staging.herokuapp.com/g' {} +
           - restart
     - stage: test staging
-      script: 'curl https://fhv-frontend-staging.herokuapp.com/'
+      script:
+        - find . -type f -name "*.js" -exec sed -i 's/{{BACKEND_URL}}/fhv-backend-staging.herokuapp.com/g' {} +
+        - 'curl https://fhv-frontend-staging.herokuapp.com/'
     - stage: deploy to production
       script: skip
       deploy:
