add uat for staging

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,17 @@ jobs:
         provider: heroku
         app: fhv-frontend-staging
         api_key: $HEROKU_API_KEY
-    - stage: test staging
+    - stage: automatic user acceptance tests on staging
       script:
-        - 'curl https://fhv-frontend-staging.herokuapp.com/'
+        - cd ..
+        - "git clone https://github.com/fhv-msi/sentiment-analysis-tests.git"
+        - cd sentiment-analysis-tests
+        - mvn verify
+        - "cd ../sentiment-analysis-frontend"
     - stage: deploy to production
       script: skip
       deploy:
         <<: *heroku
         app: fhv-frontend
-    - stage: test production
+    - stage: check production availability
       script: 'curl https://fhv-frontend.herokuapp.com/'
