--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ jobs:
         api_key: $HEROKU_API_KEY
     - stage: automatic user acceptance tests on staging
       script:
+        - tar -zxvf geckodriver-v0.19.1-linux64.tar.gz
         - "export DISPLAY=:99.0"
+        - "export webdriver.gecko.driver=$(pwd)/geckodriver"
         - "sh -e /etc/init.d/xvfb start"
         - sleep 3 # give xvfb some time to start
         - cd ..
