--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,14 @@ jobs:
         api_key: $HEROKU_API_KEY
     - stage: automatic user acceptance tests on staging
       script:
+        - "dbus-uuidgen > /etc/machine-id"
         - "export DISPLAY=:99.0"
         - "sh -e /etc/init.d/xvfb start"
         - sleep 3 # give xvfb some time to start
         - cd ..
         - "git clone https://github.com/fhv-msi/sentiment-analysis-tests.git"
         - cd sentiment-analysis-tests
-        - tar -zxvf geckodriver-v0.19.1-linux64.tar.gz        
+        - tar -zxvf geckodriver-v0.19.1-linux64.tar.gz
         - mvn verify -Dwebdriver.gecko.driver=$(pwd)/geckodriver
         - "cd ../sentiment-analysis-frontend"
     - stage: deploy to production
