--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,11 @@ jobs:
         app: fhv-frontend-staging
         api_key: $HEROKU_API_KEY
     - stage: automatic user acceptance tests on staging
-      language: java
-      before_script:
-        - "export DISPLAY=:99.0"
-        - "sh -e /etc/init.d/xvfb start"
-        - sleep 3 # give xvfb some time to start
       script:
         - cd ..
         - "git clone https://github.com/fhv-msi/sentiment-analysis-tests.git"
         - cd sentiment-analysis-tests
-        - tar -zxvf geckodriver-v0.19.1-linux64.tar.gz
-        - mvn verify -Dwebdriver.gecko.driver=$(pwd)/geckodriver
+        - mvn verify
         - "cd ../sentiment-analysis-frontend"
     - stage: deploy to production
       script: skip
